--- a/style.css
+++ b/style.css
@@ -36,3 +36,14 @@ html, body {
     padding: 5px;
     border-radius: 5px;
 }
+
+.confetti{
+    height: 100vh;
+    width: 100vw;
+    z-index: 1100;
+    position: absolute;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    display: block;
+}
